--- a/config.ini
+++ b/config.ini
@@ -6,7 +6,7 @@ cooldown = 0.01
 
 
 
-
+# LIMIT:
 # How many times the scraper will go back in message history to scrape data
 # Please create an .env file if one does not already exist or try to run the script for it to create the .env file,
 # Put your token in here
